--- a/rikser/src/index.html
+++ b/rikser/src/index.html
@@ -6,7 +6,11 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1>💖 Hello World again!</h1>
-    <p>Welcome to your Electron application.</p>
+
+   <div id="searchfield">
+    <input type="text">
+   </div>
+
+
   </body>
 </html>
