--- a/rikser/src/index.html
+++ b/rikser/src/index.html
@@ -7,10 +7,18 @@
   </head>
   <body>
 
-   <div id="searchfield">
-    <input type="text">
+    <div class="buttons">
+      <button class="buttons" id="back">Back</button>
+      <button class="buttons" id="forward">Forward</button>
+      <button class="buttons" id="refresh">Refresh</button>
+    </div>
+
+
+   <div id="searchContainer">
+    <input id="searchfield" type="text">
    </div>
 
 
+   <script src="script.js"></script>
   </body>
 </html>
