--- a/rikser/src/index.html
+++ b/rikser/src/index.html
@@ -8,9 +8,9 @@
   <body>
 
     <div class="buttons">
-      <button class="buttons" id="back">Back</button>
-      <button class="buttons" id="forward">Forward</button>
-      <button class="buttons" id="refresh">Refresh</button>
+      <div class="flex-items"><button id="refresh">Refresh</button></div>
+      <div class="flex-items"><button id="back">Back</button></div> 
+      <div class="flex-items"><button id="forward">Forward</button></div>
     </div>
 
 
