finished ui prod

--- a/rikser/src/index.html
+++ b/rikser/src/index.html
@@ -2,15 +2,15 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
+    <title>Rikser</title>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
 
     <div class="buttons">
-      <div class="flex-items"><button id="refresh">Refresh</button></div>
       <div class="flex-items"><button id="back">Back</button></div> 
       <div class="flex-items"><button id="forward">Forward</button></div>
+      <div class="flex-items"><button id="refresh">Refresh</button></div>
     </div>
 
 
