--- a/rikser-browser/src/index.html
+++ b/rikser-browser/src/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; object-src 'none'; style-src 'self'; base-uri 'self';">
     <title>Rikser</title>
     <link rel="stylesheet" href="index.css" />
   </head>
