--- a/rikser-browser/src/index.html
+++ b/rikser-browser/src/index.html
@@ -23,7 +23,7 @@
 
     <br>
   
-      <webview id="webview" style="width:1800px; height: 1100px;" src=""></webview>
+      <webview id="webview" style="width:1800px; height: 950px; border-radius: 50px;" src="https://www.google.com"></webview>
 
     <script>
      
